Fixed nav z-index

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ header {
     position: fixed;
     top: 0;
     background-color: white;
+    z-index: 1;
 }
 
 main {
